--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,16 +1,16 @@
 specVersion: 0.0.4
-description: Ethereum Contract Tracking Subgraph (powered by Substreams)
+description: ERC4626 for Ethereum (powered by Substreams)
 repository: https://github.com/graphprotocol/graph-tooling
 schema:
   file: schema.graphql
 dataSources:
   - kind: substreams
-    name: substream_test
+    name: erc4626-substreams
     network: mainnet
     source:
       package:
         moduleName: graph_out
-        file: substreams-test-v1.0.1.spkg
+        file: erc4626-substreams-v0.0.1.spkg
     mapping:
       kind: substreams/graph-entities
       apiVersion: 0.0.5
