--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "substreams:package": "substreams pack ./substreams.yaml",
     "substreams:prepare": "yarn substreams:protogen && yarn substreams:build && yarn substreams:package",
     "substreams:protogen": "substreams protogen ./substreams.yaml --exclude-paths='sf/substreams,google'",
-    "substreams:stream": "substreams run -e mainnet.eth.streamingfast.io:443 substreams.yaml map_contracts -s 16496939 -t +200"
+    "substreams:stream": "substreams run -e mainnet.eth.streamingfast.io:443 substreams.yaml graph_out -s 15690074 -t +5000"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "0.60.0"
